--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<section>
+  <h2>📑 Featured Project</h2>
+  <h3>Synergy Enterprises HRIS Transformation</h3>
+  
+  <p>📖 Business Case Preview:</p>
+  <iframe src="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/blob/main/Synergy%20Enterprices%20BIZ%20Case%20Project.pdf" 
+          width="100%" height="600px"></iframe>
+  
+  <ul>
+    <li><a href="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION" target="_blank">🔗 View Full Project Repo</a></li>
+    <li><a href="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/blob/main/Synergy%20Enterprices%20BIZ%20Case%20Project.pdf" target="_blank">📖 Open PDF in New Tab</a></li>
+    <li><a href="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/blob/main/Synergy%20Enterprices%20BIZ%20Case%20Project.pptx" target="_blank">💻 Download Slides (PPTX)</a></li>
+  </ul>
+</section>
+
+
+
+
+
 <!DOCTYPE HTML>
 <!--
 	Massively by HTML5 UP
@@ -224,4 +243,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
