--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<section style="margin: 40px 0;">
+  <h2>📑 Featured Project</h2>
+  <h3>Synergy Enterprises HRIS Transformation</h3>
+
+  <p>📖 Business Case Preview:</p>
+  <iframe src="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/raw/main/Synergy%20Enterprices%20BIZ%20Case%20Project.pdf"
+          width="100%" height="600px"
+          style="border: 2px solid #ddd; border-radius: 8px;">
+  </iframe>
+
+  <p style="margin-top: 10px;">
+    <a href="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION" target="_blank">
+      🔗 View Full Project Repo
+    </a>
+  </p>
+</section>
 
 
 
@@ -232,4 +248,5 @@
 	</body>
 
 </html>
+
 
