--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 
-<iframe src="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/raw/main/Synergy_Enterprises_Biz_Case_Project.pdf"
-        width="100%" height="600px"
-        style="border: 2px solid #ddd; border-radius: 8px;">
-</iframe>
+<section style="margin: 40px 0; padding: 20px; border: 1px solid #ddd; border-radius: 10px; background-color: #f9f9f9;">
+  <h2 style="text-align: center;">📑 Featured Project</h2>
+  <h3 style="text-align: center;">Synergy Enterprises HRIS Transformation</h3>
 
+  <p style="text-align: center; font-weight: bold;">📖 Business Case Preview:</p>
+  <iframe src="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION/raw/main/Synergy_Enterprises_Biz_Case_Project.pdf"
+          width="100%" height="600px"
+          style="border: 2px solid #ccc; border-radius: 8px; display: block; margin: 0 auto;">
+  </iframe>
+
+  <p style="text-align: center; margin-top: 15px;">
+    <a href="https://github.com/Dorisfrank/SYNERGY-ENTERPRICES-HRIS-TRANSFORMATION" target="_blank" 
+       style="text-decoration: none; color: #0366d6; font-weight: bold;">
+      🔗 View Full Project Repo
+    </a>
+  </p>
+</section>
 
 
 
@@ -238,6 +250,7 @@
 	</body>
 
 </html>
+
 
 
 
