Update index.htmlTrigger GitHub Pages workflow for updated Featured Project
Added a comment to trigger the Pages workflow so the latest index.html updates, including the embedded PDF, appear live.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Trigger workflow -->
 
 <section style="margin: 40px 0; padding: 20px; border: 1px solid #ddd; border-radius: 10px; background-color: #f9f9f9;">
   <h2 style="text-align: center;">📑 Featured Project</h2>
@@ -250,6 +251,7 @@
 	</body>
 
 </html>
+
 
 
 
